--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,6 @@
     "version": "0.1.1",
     "type": "library",
     "license": "MIT",
-    "require-dev": {
-        "pestphp/pest": "^1.22"
-    },
     "require": {
         "php": ">=8.1"
     },
@@ -21,12 +18,16 @@
             "email": "enricky.hipolito@gmail.com"
         }
     ],
+    "scripts": {
+        "test": "./vendor/bin/pest",
+        "test-coverage": "./vendor/bin/pest --coverage"
+    },
+    "require-dev": {
+        "pestphp/pest": "^2.6"
+    },
     "config": {
         "allow-plugins": {
-            "pestphp/pest-plugin": false
+            "pestphp/pest-plugin": true
         }
-    },
-    "scripts": {
-        "test": "./vendor/bin/pest"
     }
 }
