--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": ">=8.1"
+        "php": ">=8.1",
+        "phpstan/phpstan": "^1.10"
     },
     "autoload": {
         "psr-4": {
@@ -19,6 +20,7 @@
         }
     ],
     "scripts": {
+        "check": "./vendor/bin/phpstan analyse src -l 9",
         "test": "./vendor/bin/pest",
         "test-coverage": "./vendor/bin/pest --coverage"
     },
