--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": ">=8.1",
-        "phpstan/phpstan": "^1.10"
+        "php": ">=8.1"
     },
     "autoload": {
         "psr-4": {
@@ -25,7 +24,8 @@
         "test-coverage": "./vendor/bin/pest --coverage"
     },
     "require-dev": {
-        "pestphp/pest": "^2.6"
+        "pestphp/pest": "^2.6",
+        "phpstan/phpstan": "^1.10"
     },
     "config": {
         "allow-plugins": {
